tests/compile_fail/invalid_text_indent_literal.rs
use surgeist_style::{Length, TextIndent};

fn main() {
    let _indent = TextIndent {
        length: Length::ZERO,
        hanging: false,
        each_line: false,
    };
}
