tests/compile_fail/invalid_text_indent_literal.stderr
error[E0451]: fields `length`, `hanging` and `each_line` of struct `surgeist_style::TextIndent` are private
 --> tests/compile_fail/invalid_text_indent_literal.rs:5:9
  |
4 |     let _indent = TextIndent {
  |                   ---------- in this type
5 |         length: Length::ZERO,
  |         ^^^^^^ private field
6 |         hanging: false,
  |         ^^^^^^^ private field
7 |         each_line: false,
  |         ^^^^^^^^^ private field
